[tool.poetry]
name = "fast_debug"
version = "0.1.0"
description = "A fastAPI based python debugger"
authors = ["Peter Krenesky <kreneskyp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jsonpickle = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "fast_debug.server:run"
